# otus_algorithms

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  emu.sh
02_Базовые_структуры_данных:_массив,_динамический_массив,_список,_стек,_очередь,_очередь_с_приоритетами/: BArray.h  DBArray.h  darray.cpp  test_olist.cpp
03_programming_chess/: CMakeLists.txt  README.md  fen_parser.cpp  fen_parser.h  get_knight_moves.cpp  kight_moves.cs  knight_moves.cpp  knight_moves.h  test_fen_parser.cpp  test_parse_fen.cpp  Шахматные_тесты-19350-882833.txt
03_programming_chess/bitboard/: bitboard.h  bitboard.pro  mainwindow.cpp  mainwindow.ui
08_linear_sort/: CMakeLists.txt  README.md  countsort.h  radixsort.h
08_linear_sort/notes/: linear_sorting.ipynb
09_avl_decart_tree/: CMakeLists.txt  README.md  avltree.cpp  avltree.h  test_avltree.cpp
24_encryption_algorithms/: CMakeLists.txt  README.md  decrypt_xor_main.cpp  encrypt_xor_main.cpp  key.cpp  key.h  test_xorcrypt.cpp  xorcrypt.cpp  xorcrypt.h  xorcrypt_main.cpp
25_huffman_lz_rle/: CMakeLists.txt  README.md
include/: test_tools.h
lesson_01/: multiple_by_add.ram  sum.ram
lesson_01/homework/: divide_by_sub.ram  sort.ram
lesson_02/: BArray.h  CMakeLists.txt  DArray.h  IArray.h  OList.h  PriorityQueue.h  SBArray.h  darray.cpp  linked_list_demo.py  stopwatch.h  test_barray.cpp  test_iarray.cpp  test_olist.cpp  test_priority_queue.cpp
lesson_03/: CMakeLists.txt  Makefile  fast_multiply.cpp  fib.txt  fib_compare.cpp  fib_matrix.cpp  fib_matrix.h  gcd_compare  gcd_compare.cpp  power.h  power_compare.cpp  test_fib_matrix.cpp  test_power.cpp  test_ubigint.cpp  ubigint.h
lesson_04/: CMakeLists.txt  insertion_sort.h  sort_algorithms.h  test_insertion_sort.cpp  test_sort_algorithms.cpp  test_sort_algorithms.txt
lesson_05/: CMakeLists.txt  heapsort.h  heapsort.ipynb  test_heapsort.cpp
lesson_06/: CMakeLists.txt  Readme.md  mergesort.h  test_mergesort.cpp
lesson_06/notes/: sorting.ipynb
lesson_07/: CMakeLists.txt  Readme.md  countsort.h  radixsort.h  test_countsort.cpp  test_radixsort.cpp
lesson_07/notes/: linear_sorting.ipynb
lesson_08/: Readme.md
lesson_09/: CMakeLists.txt  Readme.md
lesson_09/notes/: 09._Двоичные_деревья__декартовы_деревья__АВЛ_деревья__2-32615-042d16.pptx
lesson_10/: Readme.md
lesson_10/notes/: 10._Красно_черные_деревья__расширяющиеся_деревья-32615-20b153.pptx
lesson_11/: Readme.md
lesson_11/notes/: 11._B_деревья-32615-6f0787.pptx  ДОП_и_друге_деревья-32615-7a87bc.docx
template/: CMakeLists.txt  README.md
